--- a/output/style.css
+++ b/output/style.css
@@ -1257,6 +1257,14 @@ html {
   height: 100vh;
 }
 
+.h-auto {
+  height: auto;
+}
+
+.h-full {
+  height: 100%;
+}
+
 .w-52 {
   width: 13rem;
 }
@@ -1279,6 +1287,10 @@ html {
 
 .gap-10 {
   gap: 2.5rem;
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
 
 .rounded-full {
@@ -1312,6 +1324,11 @@ html {
 
 .fill-current {
   fill: currentColor;
+}
+
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .px-4 {
